--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,7 @@ image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/
 image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml/badge.svg["Spell Check status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml"]
 
 This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
+It gives you the possibility of using fractional rpm speeds
 
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/{repository-name}
