--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,13 @@
 :repository-owner: arduino-libraries
-:repository-name: StepperFrac
+:repository-name: StepperF
 
 = {repository-name} Library for Arduino =
 
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/check-arduino.yml/badge.svg["Check Arduino status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/check-arduino.yml"]
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/compile-examples.yml/badge.svg["Compile Examples status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/compile-examples.yml"]
-image:https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml/badge.svg["Spell Check status", link="https://github.com/{repository-owner}/{repository-name}/actions/workflows/spell-check.yml"]
 
 This library allows you to control unipolar or bipolar stepper motors. To use it you will need a stepper motor, and the appropriate hardware to control it.
-It gives you the possibility of using fractional rpm speeds
+It gives you the possibility of using fractional rpm speeds.
+
+This library has been modified by Alberto Girardi in 2023 to allow the use of fractional rpm speeds.
 
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/{repository-name}
